
 Other changes:

   - myIDialog: set OK button insensitive in case of an error.
   - myIWindow: set_settings() is renamed set_geometry_settings() (todo #1282).
   - myIWindow: deprecate my_iwindow_get_keyname() (todo #1283).
   - No more try to read/write user settings from myIWindow geometry settings (todo #1284).
   - ofaAccountBookBin class is renamed to ofaAccountBookArgs.
   - ofaBalanceBin class is renamed to ofaBalanceArgs.
   - ofaDossierActionsBin: new class.
   - ofaDossierEditBin: new class.
   - ofaDossierMetaBin: new class.
   - ofaExerciceMetaBin: new class.
   - ofaIDBDossierEditor: new interface.
   - ofa_idbdossier_meta_get_provider() no more returns a new reference (todo #1304).
   - ofa_idbdossier_meta_get_settings_group() no more returns a new string (todo #1305).
   - ofa_idbdossier_meta_get_periods() no more returns a new list.
   - ofa_idbdossier_meta_get_current_period() no more returns a new reference.
   - ofaIDBExerciceEditor: new interface.
   - ofaIDBProvider: maintains a pointer to ofaHub.
   - ofaIDBProvider::connect() set arguments for an automatic connection.
   - ofaIDBProvider::new_exercice_editor() is moved to ofaIDBDossierEditor.
   - ofaIDBProvider::new_exercice_meta() is moved to ofaIDBDossierMeta.
   - ofaISetter: new interface which targets dynamic objects.
   - ofaLedgerBookBin class is renamed to ofaLedgerBookArgs.
   - ofaLedgerSummaryBin class is renamed to ofaLedgerSummaryArgs.
   - ofaMysqlDossierBin: new class.
   - ofaMysqlDossierEditor: new class.
   - ofaMysqlExerciceBin: new class.
   - ofaMysqlExerciceEditor: new class.
   - ofaMysqlRootBin: new class.
   - ofaReconcilBin class is renamed to ofaReconcilArgs.
   - ofa_prefs_export_default_folder(): new function.

   + General review of read/write user settings.

-----------------------------------------------------------------------
 P. Wieser - Created on 2014, may 2nd
             Last updated on 2017, jan. 4th.